tests/cases/compiler/binaryArithmatic3.ts
var v = undefined | undefined;
//~^ ERROR: The value 'undefined' cannot be used here.
//~| ERROR: The value 'undefined' cannot be used here.